Fix: correct package.json for Render deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon -r dotenv/config src/index.js",
-    "start":   "node src/index.js"
-
+    "start": "node src/index.js"  // ← QUITA la coma extra si la hay
   },
   "keywords": [],
   "author": "",
@@ -17,7 +16,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dayjs": "^1.11.19",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.2.3",  // ← SÍ está en dependencies, está BIEN
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
