--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "vite": "^7.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -31,6 +32,6 @@
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.17",
-    "vite": "^7.2.2"
+    
   }
 }
