--- a/client/package.json
+++ b/client/package.json
@@ -17,17 +17,19 @@
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.0",
     "react-router": "^7.9.6",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+      "@vitejs/plugin-react-swc": "^4.2.1",
+       "vite": "^7.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react-swc": "^4.2.1",
+  
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.2"
+   
   }
 }
