--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@vitejs/plugin-react-swc": "^4.2.1",
     "axios": "^1.13.2",
     "js-cookie": "^3.0.5",
     "react": "^19.2.0",
@@ -18,18 +19,15 @@
     "react-hook-form": "^7.66.0",
     "react-router": "^7.9.6",
     "tailwindcss": "^4.1.17",
-      "@vitejs/plugin-react-swc": "^4.2.1",
-       "vite": "^7.2.2"
+    "vite": "^7.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
-  
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
-    "globals": "^16.5.0",
-   
+    "globals": "^16.5.0"
   }
 }
